# xmrigCC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  index.html
cmake/: FindHwloc.cmake  FindLibUV.cmake  HunterGate.cmake
src/: App.cpp  App.h  App_unix.cpp  Console.h  Cpu.cpp  Cpu.h  CpuImpl.h  Cpu_arm.cpp  Cpu_hwloc.cpp  Cpu_mac.cpp  Cpu_stub.cpp  Cpu_unix.cpp  Cpu_win.cpp  HwLoc.cpp  HwLoc.h  Mem.cpp  Mem.h  Mem_unix.cpp  Mem_win.cpp  Options.cpp  Options.h  Platform.cpp  Platform.h  Platform_mac.cpp  Platform_unix.cpp  Summary.cpp  config.json  default_config.json  donate.h  version.h
src/api/: ApiState.cpp
src/cc/: CCClient.cpp  ClientStatus.cpp  ClientStatus.h  ProxyStatus.h  Service.cpp  Service.h
src/crypto/: CryptoNight.cpp  CryptoNight.h  CryptoNight_arm.h  CryptoNight_test.h  CryptoNight_x86.h
src/net/: BoostConnection.h  BoostTcpConnection.cpp  BoostTcpConnection.h  BoostTlsConnection.cpp  BoostTlsConnection.h  Client.cpp  Client.h  Connection.cpp  Connection.h  Network.cpp  Network.h
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h  FailoverStrategy.cpp  FailoverStrategy.h  SinglePoolStrategy.cpp  SinglePoolStrategy.h
src/workers/: DoubleWorker.cpp  Handle.cpp  Handle.h  MultiWorker.cpp  MultiWorker.h  SingleWorker.cpp  Worker.cpp  Workers.cpp  Workers.h
test/cpu/: CMakeLists.txt  cpu.cpp  test_cpu.cpp  test_hwloc.cpp
